2.1.0
[chg] string paths
[upd] required changes for script.module.python.twitch v2.0.0 refactor
[add] inputstream.adaptive support for versions >= 2.0.10
[add] Revoke token
[add] Update token route
[add] notify at start and group notifications at start to live notification settings
[add] logo and game to live notifications
[add] Hebrew strings [Eng2Heb]

2.0.2
[fix/upd] use display names for communities

2.0.1
[fix] only open chat for live streams
[fix] notify to retry if goo.gl url shortening fails for authentication
[fix] check for game value before adding Goto Game context menu
[fix] blacklist filter excluding unset game
[fix] use same quality on stream reconnection
[fix] do not ask for search query on '..'
[fix] remake cache path on clear
[fix/upd] cache static menus to disk
[fix/upd] pagination to Followed Games
[add] Kodi per-page sort methods
[add] quality parameter added to play route
[add] channel and viewer count to Games where possible
[add] VodCast colorization

2.0.0
*** NOT backwards compatible with v1 (favorites, routes will NOT work)
*** New OAuth token required, see Settings - Get OAuth token
- Kodi 17 ready, content/media types set per new official repository requirements
- remove xbmcswift dependency
- remove api portion in favor of new module script.module.python.twitch (based on python-twitch by ingwinlu)
- remove Teams, end-points (no longer available)
- use Twitch API v5
- add caching for api calls, cache can be set/cleared from settings
- add token generation, checking
- add context menus:
    - refresh
    - 'go to' channel videos(display name) for streams
    - 'go to' game for streams and videos
- quality selection ask/source/bandwidth (clips excluded from bandwidth)
- add Live notifications for following
- add more search options
- add Communities
- add Follow/Unfollow
- add blacklisting of users/games/communities (search excluded)
- add set default quality for stream/video/clips per channel
- add Playlists
- add Collections
- add Clips