@@ -17,6 +17,7 @@
 [add] inputstream.adaptive support for inputstream.adaptive versions >= 2.0.10
 [add] Revoke token
 [add] Update token route
+[add] Reset cache on Refresh to Settings -> Cache
 [add] notify at start and group notifications at start to live notification settings
 [add] logo and game to live notifications
 [add] Hebrew strings [Eng2Heb]
